--- a/view/pages/index.html
+++ b/view/pages/index.html
@@ -1638,8 +1638,6 @@
                                     document.querySelector(".transition");
                                 const postThumbnail =
                                     document.querySelector(".post-thumbnail");
-                                const postThumbnailRect =
-                                    postThumbnail.getBoundingClientRect();
                                 fixedBox.style.backgroundImage =
                                     hero.style.backgroundImage;
                                 console.log(hero.style.backgroundImage);
@@ -1658,6 +1656,7 @@
                                 fixedBox.style.left = `${
                                     rect.left + rect.width / 2
                                 }px`;
+                                fixedBox.style.borderRadius = "1.875rem 1.875rem 0 0";
                                 // Animate to center
                                 setTimeout(() => {
                                     fixedBox.classList.add("smooth");
@@ -1665,7 +1664,10 @@
                                 }, 10); // Slight delay to allow the transition to work
 
                                 setTimeout(() => {
+                                    const postThumbnailRect =
+                                        postThumbnail.getBoundingClientRect();
                                     fixedBox.classList.remove("centered");
+                                    console.log(`${postThumbnailRect.width}px`);
                                     fixedBox.style.width = `${postThumbnailRect.width}px`;
                                     fixedBox.style.height = `${postThumbnailRect.height}px`;
                                     fixedBox.style.left = `${
@@ -1677,12 +1679,15 @@
                                         postThumbnailRect.height / 2 +
                                         window.scrollY
                                     }px`;
+                                    fixedBox.style.borderRadius = "var(--border-radius)";
 
                                     // scroll to the element position
                                     // calc the top offset if box compare to the top of the body
                                     setTimeout(() => {
                                         postThumbnail.style.visibility =
                                             "visible";
+                                        hero.style.visibility = "visible";
+                                        fixedBox.style.display = "none";
                                         //   fixedBox.style.display = "none";
                                     }, 500); // Match the duration of the animation (0.3s)
                                 }, 1000);
